# Controllers/AiController.cs
@@ -1,6 +1,7 @@
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.AspNetCore.Authorization;
 using WEBAPI_m1IL_1.Services;
+using WEBAPI_m1IL_1.DTO;
 namespace WEBAPI_m1IL_1.Controllers
 {
     [ApiController]
@@ -16,16 +17,16 @@ namespace WEBAPI_m1IL_1.Controllers
             this.userService = userService;
         }
 
-        [HttpGet("ChatWithAi")]
+        [HttpPost("ChatWithAi")]
         [Authorize]
-        public async Task<string> ChatToAI(string prompt, string? image, string context, string model)
+        public async Task<string> ChatToAI(InputChat inputChat)
         {
             var user = await userService.GetCurrentUserAsync();
-            return await _aiService.AskQuestionToAi(user.Id, prompt, "chat", context, model, image);
+            return await _aiService.AskQuestionToAi(user.Id, inputChat.Prompt, "chat", inputChat.Context, inputChat.Model, inputChat.Image);
         }
 
         [HttpGet("GetAllModel")]
-        public async Task<string> GetAllModel(string prompt, string? image, string context, string model)
+        public async Task<string> GetAllModel()
         {
             return  _aiService.GetAllModel();
         }
